test_regress/t/t_randc.out
%Warning-RANDC: t/t_randc.v:8:26: Unsupported: Converting 'randc' to 'rand'
    8 |    randc bit [WIDTH-1:0] m_var;
      |                          ^~~~~
                ... For warning description see https://verilator.org/warn/RANDC?v=latest
                ... Use "/* verilator lint_off RANDC */" and lint_on around source to disable this message.
%Warning-RANDC: t/t_randc.v:45:26: Unsupported: Converting 'randc' to 'rand'
   45 |    randc bit [WIDTH-1:0] m_var;
      |                          ^~~~~
%Warning-RANDC: t/t_randc.v:74:17: Unsupported: Converting 'randc' to 'rand'
   74 |    randc enum_t m_var;
      |                 ^~~~~
%Error: Exiting due to
